<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 Rishi Raj
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">Exercise Counter</string>
    <string name="undo_text">UNDO</string>
    <string name="undo_message">One exercise removed</string>
    <string name="abort_message">Abort current exercise session?</string>
    <string name="yes">yes</string>
    <string name="scheduled_for">Next session:</string>
    <string name="time">Time:</string>
    <string name="no">no</string>
    <string name="title_activity_session_edit">Edit session</string>
    <string name="title_activity_session_create">Create new session</string>
    <string name="title_activity_exercise_create">Add new exercise</string>
    <string name="title_activity_exercise_edit">Edit exercise</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="notify">
        <item>5 minutes before</item>
        <item>15 minutes before</item>
        <item>Never</item>
    </string-array>
    <string-array name="stats_view">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string name="action_stats">Stats</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Rate us</string>
    <string name="action_about">About us</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="title_import_session_activity">Add sessions</string>
    <string name="na">NA</string>
    <string name="submit">Submit</string>
    <string name="number_of_turns">Number of turns</string>
    <string name="tpt_sec">Time per turn (sec)</string>
    <string name="gbt_sec">Gap after turn (sec)</string>
    <string name="autoplay">Autoplay</string>
    <string name="minute_before_session">Minute before session</string>
    <string name="min_before_session_metadata">Remind x minutes before session</string>
    <string name="save_amp_restore"><![CDATA[Save & Restore]]></string>
    <string name="log_sessions">Log sessions</string>
    <string name="log_sessions_details">Keep record of sessions completed</string>
    <string name="import_sessions">Import</string>
    <string name="restore_from_backup">Restore from a backup of sessions</string>
    <string name="export_sessions">Export</string>
    <string name="backup_sessions">Make a backup of sessions</string>
    <string name="remove_all">Remove all</string>
    <string name="remove_all_details">Delete all the sessions and start afresh</string>
    <string name="sound">Sound</string>
    <string name="mute">Mute</string>
    <string name="tts">Speak exercise name</string>
    <string name="tts_details">Use text to speech</string>
    <string name="play_countdown">Play counting</string>
    <string name="notifs">Notifications</string>
    <string name="session_alert">Session Alert</string>
    <string name="session_alert_details">Alert for upcoming sessions</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="clear_all">Clear all</string>
    <string name="mark_all">Mark all</string>
    <string name="cancel">Cancel</string>
    <string name="monday">Monday</string>
    <string name="monday_short">MON</string>
    <string name="tuesday_short">TUE</string>
    <string name="wednesday_short">WED</string>
    <string name="thursday_short">THU</string>
    <string name="friday_short">FRI</string>
    <string name="saturday_short">SAT</string>
    <string name="sunday_short">SUN</string>
    <string name="session_add_banner">Add the following sessions</string>
    <string name="open_source_licenses">Licenses</string>
    <string name="countstyle">Count down/up</string>
</resources>
