<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_stat"
        android:icon="@drawable/ic_show_chart_white_48dp"
        android:title="@string/action_stats"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_white_48dp"
        android:title="@string/action_favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_license"
        android:title="@string/open_source_licenses"
        app:showAsAction="never" />

</menu>
